# NoiseParticles

./: CmakeLists.txt
libs/juce/examples/Plugins/WebViewPluginDemoGUI/: package-lock.json  package.json
plugin/: CMakeLists.txt
plugin/UI/: package-lock.json  script.js  style.css
plugin/include/NoiseParticles/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/DSP/: noiseGenerator.h
